--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-js-pagination": "^3.0.3",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^8.0.7",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.4.3",
